--- a/src/fade.css
+++ b/src/fade.css
@@ -1,3 +1,10 @@
-.fade {
-  transform: translate(20px);
+/* fade animation */
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.3s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
