feat: create bouncing_exits directory in src folder chore: update gulpfile to compile all files in the root directory and subdirectories of src

--- a/src/bouncing_exits/bounceOutDown.css
+++ b/src/bouncing_exits/bounceOutDown.css
@@ -15,14 +15,10 @@
   }
 }
 
-.bounceOutDown-enter,
-.bounceOutDown-leave-to {
-  animation-duration: 1s;
-  animation-fill-mode: both;
+.bounceOutDown-leave-active {
+  animation: bounceOutDown 1s;
 }
 
-.bounceOutDown-enter-active,
-.bounceOutDown-leave-active{
-  animation-name: bounceOutDown;
-
+.bounceOutDown-enter-active {
+  animation: bounceOutDown 1s reverse;
 }
